Clean legacy invocation code